fix: change styles and fix section bug;

--- a/index.html
+++ b/index.html
@@ -22,93 +22,94 @@
     </nav>
 </header>
 <main>
-    <section id="portfolio"></section>
-    <div class="portfolio-hexagon">
-        <div class="hexagon-block">
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-1">
+    <section id="portfolio">
+        <div class="portfolio-hexagon">
+            <div class="hexagon-block">
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-1">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-2">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-3">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-4">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-2">
+            <div class="hexagon-block-odd">
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-5">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-6">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-7">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-8">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-9">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-3">
+            <div class="hexagon-block">
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-10">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-4">
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-11">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-12">
+                        </div>
+                    </div>
+                </div>
+                <div class="hexagon-layer-1">
+                    <div class="hexagon-layer-2">
+                        <div class="hexagon-layer-3 layer-img-13">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="hexagon-block-odd">
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-5">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-6">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-7">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-8">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-9">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="hexagon-block">
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-10">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-11">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-12">
-                    </div>
-                </div>
-            </div>
-            <div class="hexagon-layer-1">
-                <div class="hexagon-layer-2">
-                    <div class="hexagon-layer-3 layer-img-13">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    </section>
     <section id="about">
         <div class="about-block">
             <div class="about-img">
